name:                zn
version:             0.1.0.0
synopsis:            IRC bot
description:         Xn's rival
author:              siers
maintainer:          wimuan@gmail.com
copyright:           Copyleft
build-type:          Simple
cabal-version:       >=1.20

executable zn
  hs-source-dirs:      .

  main-is:             Main.hs
  other-modules:       Zn.Bot
                       Zn.Commands
                       Zn.Commands.Logs
                       Zn.Commands.Mping
                       Zn.Commands.Replies
                       Zn.Commands.Uptime
                       Zn.Commands.URL
                       Zn.Commands.Version
                       Zn.Commands.VersionInternal
                       Zn.Data.Ini
                       Zn.Data.UMVar
                       Zn.Grammar
                       Zn.Handlers
                       Zn.IRC
                       Zn.Pinger
                       Zn.Restarter
                       Zn.Restarter.Data.Streaming.Network
                       Zn.Restarter.Network.IRC.Conduit
                       Zn.TLS

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , connection
                     , containers
                     , data-default
                     , exceptions
                     , http-client
                     , http-client-tls
                     , http-types
                     , ini
                     , irc-client
                     , irc-conduit
                     , lens
                     , mtl
                     , network
                     , process
                     , regex-tdfa
                     , retry
                     , safe
                     , split
                     , stm
                     , stm-chans
                     , streaming-commons
                     , strict
                     , strptime
                     , tagsoup
                     , template-haskell
                     , text
                     , time
                     , tls
                     , transformers
                     , unix
                     , unix-time
                     , x509-system
                     , xml-conduit
                     , megaparsec
