name:                zn
version:             0.1.0.0
synopsis:            IRC bot
description:         Xn's rival
author:              siers
maintainer:          wimuan@gmail.com
copyright:           Copyleft
build-type:          Simple
cabal-version:       >=1.20

executable zn
  hs-source-dirs:      .

  main-is:             Main.hs
  other-modules:       Zn.Bot
                       Zn.Bot.Handle
                       Zn.Command
                       Zn.Commands
                       Zn.Commands.Logs
                       Zn.Commands.Mping
                       Zn.Commands.Replies
                       Zn.Commands.Sed
                       Zn.Commands.Uptime
                       Zn.Commands.URL
                       Zn.Commands.Version
                       Zn.Commands.VersionInternal
                       Zn.Data.Ini
                       Zn.Data.UMVar
                       Zn.Grammar
                       Zn.Handlers.Kick
                       Zn.Handlers.Privmsg
                       Zn.IRC
                       Zn.Process
                       --Zn.Restarter
                       --Zn.Restarter.Data.Streaming.Network
                       --Zn.Restarter.Network.IRC.Conduit
                       Zn.Regex
                       Zn.Socket
                       Zn.TLS
                       Hledger.Utils.Regex

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , array
                     , async
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , connection
                     , containers
                     , data-default
                     , exceptions
                     , extra
                     , http-client
                     , http-client-tls
                     , http-types
                     , ini
                     , irc-client >= 1.0.0.0
                     , irc-conduit
                     , lens
                     , megaparsec
                     , mtl
                     , network
                     , process
                     , regex-tdfa
                     , regex-tdfa-text
                     , retry
                     , safe
                     , split
                     , stm
                     , stm-chans
                     , streaming-commons
                     , strict
                     , strptime
                     , tagged
                     , tagsoup
                     , template-haskell
                     , text
                     , time
                     , tls
                     , transformers
                     , uglymemo
                     , unix
                     , unix-time
                     , x509-system
                     , xml-conduit
